src/styles/Landing.css
section {
     
  height: 100vh;
  width: 100vw;
  margin: 0px;
  padding: 0px;
  overflow-x: hidden; 
  white-space:nowrap;
  background-color: var(--primary-color);
}

.header {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: auto;
}


img {
    margin-top: 50px;
}

a {
    animation: scroll;
}

@keyframes scroll {
    0% {
      transform: translateY(0);
    }
  
    30% {
      transform: translateY(3.75rem);
    }
  }

